# Precos_Imoveis_Fortaleza_Web-Scraping_Machine-Learning

./: 00. web_scraping.ipynb  01. pipe_limpeza.ipynb  02. análise dos dados.ipynb  03. Modelo.ipynb  04.aplicacao.py  README.md  model_columns.joblib  modelo_random_forest.joblib  pyproject.toml
